Changed the icons using google icons and added stylesheet request for it in index file

--- a/frontend/projects/upgrade/src/index.html
+++ b/frontend/projects/upgrade/src/index.html
@@ -11,6 +11,12 @@
     <meta property="og:image" content="/upgrade/favicon.ico" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <!-- use  class="material-symbols-outlined" for google fonts -->
+    <!--Example usage: <span class="material-symbols-outlined"> icon-name </span> -->
     <script src="https://accounts.google.com/gsi/client"></script>
     <script src="./assets/js/demo-app.js"></script>
   </head>
